[package]
name = "safehttp"
version = "0.2.0"
authors = ["Antoine Motet <antoine.motet@gmail.com>"]
description = "A slow (but simple, safe and strict) HTTP/1.1 parser"
license = "MIT OR Apache-2.0"
repository = "https://github.com/motet-a/safehttp"

[dependencies]
http = "1.1.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "parse"
harness = false
